--- a/app/src/main/res/layout/row_featured_item.xml
+++ b/app/src/main/res/layout/row_featured_item.xml
@@ -4,13 +4,14 @@
     android:layout_height="60sp"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    app:cardCornerRadius="30sp"
+    app:cardCornerRadius="10sp"
     app:cardElevation="5sp"
     android:layout_marginTop="10sp"
     android:layout_marginBottom="10sp"
     android:layout_marginLeft="8sp"
     android:layout_marginRight="8sp"
-    tools:cardBackgroundColor="@color/featured_color_red">
+    tools:cardBackgroundColor="@color/featured_color_red"
+    android:id="@+id/featured_sensor_card">
 
     <FrameLayout
         android:layout_width="match_parent"
