sensors list screen complete

--- a/app/src/main/res/layout/activity_tab_main.xml
+++ b/app/src/main/res/layout/activity_tab_main.xml
@@ -1,61 +1,70 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".view.tab_dashboard_activity.TabMainActivity"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    tools:context=".view.tab_dashboard_activity.TabMainActivity">
+    android:id="@+id/coordinator">
 
-    <android.support.v7.widget.CardView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        app:cardElevation="5sp">
-
-        <LinearLayout
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:orientation="vertical">
-
-            <TextView
-                android:layout_width="match_parent"
-                android:layout_height="?android:attr/actionBarSize"
-                android:text="@string/app_name_first_half_small"
-                android:textSize="25sp"
-                android:gravity="center_vertical"
-                android:paddingLeft="20sp"
-                android:textColor="@color/colorBlackShade2"
-                fontPath="fonts/Comfortaa-Bold.ttf"
-                tools:ignore="MissingPrefix,RtlHardcoded,RtlSymmetry" />
-
-            <android.support.v7.widget.RecyclerView
-                android:layout_width="match_parent"
-                android:layout_height="?android:attr/actionBarSize"
-                app:layoutManager="android.support.v7.widget.LinearLayoutManager"
-                android:scrollbarThumbHorizontal="@color/colorBlackShade2"
-                android:orientation="horizontal"
-                android:scrollbars="horizontal"
-                android:scrollbarSize="1sp"
-                android:scrollbarFadeDuration="200"
-                android:scrollbarDefaultDelayBeforeFade="200"
-                tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
-                tools:listitem="@layout/row_tab_header"
-                tools:orientation="horizontal"
-                tools:itemCount="5"
-                android:id="@+id/header_recycler_view">
-
-            </android.support.v7.widget.RecyclerView>
-
-        </LinearLayout>
-
-    </android.support.v7.widget.CardView>
-
-    <android.support.v4.view.ViewPager
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@color/colorTextFive"
-        android:id="@+id/view_pager">
+        android:orientation="vertical">
 
-    </android.support.v4.view.ViewPager>
 
-</LinearLayout>
+        <android.support.v7.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:cardElevation="5sp">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="?android:attr/actionBarSize"
+                    android:text="@string/app_name_first_half_small"
+                    android:textSize="25sp"
+                    android:gravity="center_vertical"
+                    android:paddingLeft="20sp"
+                    android:textColor="@color/colorBlackShade2"
+                    fontPath="fonts/Comfortaa-Bold.ttf"
+                    tools:ignore="MissingPrefix,RtlHardcoded,RtlSymmetry" />
+
+                <android.support.v7.widget.RecyclerView
+                    android:layout_width="match_parent"
+                    android:layout_height="?android:attr/actionBarSize"
+                    app:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                    android:scrollbarThumbHorizontal="@color/colorBlackShade2"
+                    android:orientation="horizontal"
+                    android:scrollbars="horizontal"
+                    android:scrollbarSize="1sp"
+                    android:scrollbarFadeDuration="200"
+                    android:scrollbarDefaultDelayBeforeFade="200"
+                    tools:layoutManager="android.support.v7.widget.LinearLayoutManager"
+                    tools:listitem="@layout/row_tab_header"
+                    tools:orientation="horizontal"
+                    tools:itemCount="5"
+                    android:id="@+id/header_recycler_view">
+
+                </android.support.v7.widget.RecyclerView>
+
+            </LinearLayout>
+
+        </android.support.v7.widget.CardView>
+
+        <android.support.v4.view.ViewPager
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:background="@color/colorTextFive"
+            android:id="@+id/view_pager">
+
+        </android.support.v4.view.ViewPager>
+
+    </LinearLayout>
+
+</android.support.design.widget.CoordinatorLayout>
