--- a/app/src/main/res/layout/fragment_items.xml
+++ b/app/src/main/res/layout/fragment_items.xml
@@ -5,7 +5,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android"
-    tools:context=".view.tab_dashboard_activity.sections.sensors_fragment.SensorsFragment">
+    tools:context=".view.tab_dashboard_activity.sections.items_fragment.ItemsFragment">
 
     <LinearLayout
         xmlns:tools="http://schemas.android.com/tools"
