--- a/app/src/main/res/layout/fragment_directions.xml
+++ b/app/src/main/res/layout/fragment_directions.xml
@@ -36,7 +36,7 @@
             android:paddingTop="5sp"
             android:paddingBottom="5sp"
             android:id="@+id/data_type"
-            tools:ignore="MissingPrefix,RtlHardcoded,RtlSymmetry"/>
+            tools:ignore="RtlHardcoded,RtlSymmetry"/>
 
     </android.support.v7.widget.CardView>
 
@@ -92,6 +92,6 @@
         android:textColor="@color/white"
         android:background="@color/red_shade_three"
         android:layout_gravity="center"
-        tools:ignore="MissingPrefix,RtlHardcoded,RtlSymmetry"/>
+        tools:ignore="RtlHardcoded,RtlSymmetry"/>
 
 </LinearLayout>
