--- a/app/src/main/res/layout/layout_about_sensor.xml
+++ b/app/src/main/res/layout/layout_about_sensor.xml
@@ -18,10 +18,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/colorTextOne"
-            android:textSize="18sp"
+            android:textSize="15sp"
             android:text="@string/about_sensor"
+            fontPath="fonts/Comfortaa-Bold.ttf"
             android:gravity="center"
-            android:padding="10sp"/>
+            android:padding="10sp"
+            tools:ignore="MissingPrefix" />
 
         <ImageView
             android:layout_width="match_parent"
@@ -33,8 +35,8 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:maxLines="5"
-            android:textSize="14sp"
-            android:textColor="@color/colorTextOne"
+            android:textSize="15sp"
+            android:textColor="@color/colorTextTwo"
             android:text="@string/about_proximity"
             android:padding="10sp"
             android:ellipsize="end"
@@ -49,11 +51,12 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:text="@string/learn_more"
+            fontPath="fonts/Comfortaa-Bold.ttf"
             android:textColor="@color/green_shade_three"
-            android:paddingLeft="20sp"
-            android:paddingRight="20sp"
+            android:paddingLeft="15sp"
+            android:paddingRight="15sp"
             android:paddingTop="8sp"
             android:paddingBottom="8sp"
             android:id="@+id/learn_more"
@@ -66,63 +69,3 @@
     </LinearLayout>
 
 </android.support.v7.widget.CardView>
-
-<!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
-<!--xmlns:tools="http://schemas.android.com/tools"-->
-<!--android:layout_width="match_parent"-->
-<!--android:layout_height="wrap_content"-->
-<!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
-<!--android:orientation="vertical"-->
-<!--android:background="@color/colorAlmostWhite">-->
-
-
-<!--<TextView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:textColor="@color/colorMajorDark"-->
-        <!--android:textSize="20sp"-->
-        <!--android:text="@string/about_sensor"-->
-        <!--android:gravity="start"-->
-        <!--android:padding="10sp"/>-->
-
-    <!--<ImageView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="1sp"-->
-        <!--android:background="@color/colorTextThree"-->
-        <!--tools:ignore="ContentDescription,SmallSp" />-->
-
-    <!--<TextView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:maxLines="5"-->
-        <!--android:textSize="17sp"-->
-        <!--android:textColor="@color/colorIntensity5"-->
-        <!--android:text="@string/about_proximity"-->
-        <!--android:padding="10sp"-->
-        <!--android:ellipsize="end"-->
-        <!--android:id="@+id/about"/>-->
-
-    <!--<ImageView-->
-        <!--android:layout_width="match_parent"-->
-        <!--android:layout_height="1sp"-->
-        <!--android:background="@color/colorTextThree"-->
-        <!--tools:ignore="ContentDescription,SmallSp" />-->
-
-    <!--<TextView-->
-        <!--android:layout_width="wrap_content"-->
-        <!--android:layout_height="wrap_content"-->
-        <!--android:textSize="16sp"-->
-        <!--android:text="@string/learn_more"-->
-        <!--android:textColor="@color/red_shade_three"-->
-        <!--android:paddingLeft="20sp"-->
-        <!--android:paddingRight="20sp"-->
-        <!--android:paddingTop="10sp"-->
-        <!--android:paddingBottom="10sp"-->
-        <!--android:layout_margin="10sp"-->
-        <!--android:id="@+id/learn_more"-->
-        <!--android:gravity="center_horizontal"-->
-        <!--android:background="@drawable/oval_button"-->
-        <!--android:layout_gravity="center_horizontal"-->
-        <!--tools:ignore="MissingPrefix,RtlHardcoded,RtlSymmetry"/>-->
-
-<!--</LinearLayout>-->
