--- a/app/src/main/res/layout/layout_basic_information.xml
+++ b/app/src/main/res/layout/layout_basic_information.xml
@@ -19,10 +19,12 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/colorTextOne"
-            android:textSize="18sp"
+            android:textSize="15sp"
+            fontPath="fonts/Comfortaa-Bold.ttf"
             android:text="@string/key_statistics"
             android:gravity="center"
-            android:padding="10sp"/>
+            android:padding="10sp"
+            tools:ignore="MissingPrefix" />
 
         <ImageView
             android:layout_width="match_parent"
@@ -48,12 +50,13 @@
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:textSize="16sp"
+            android:textSize="14sp"
             android:text="@string/more_statistics"
             android:textColor="@color/green_shade_three"
             android:paddingLeft="20sp"
             android:paddingRight="20sp"
             android:paddingTop="8sp"
+            fontPath="fonts/Comfortaa-Bold.ttf"
             android:paddingBottom="8sp"
             android:id="@+id/view_more"
             android:layout_margin="5sp"
