--- a/app/src/main/res/layout/layout_go_back_or_to_test.xml
+++ b/app/src/main/res/layout/layout_go_back_or_to_test.xml
@@ -24,11 +24,13 @@
         android:layout_width="0sp"
         android:layout_height="match_parent"
         android:layout_weight="1"
-        android:textSize="20sp"
+        android:textSize="22sp"
         android:text="@string/go_to_test"
+        fontPath="fonts/Comfortaa-Bold.ttf"
         android:textColor="@color/white"
         android:background="@color/red_shade_three"
-        android:padding="12sp"
-        android:gravity="center"/>
+        android:padding="10sp"
+        android:gravity="center"
+        tools:ignore="MissingPrefix" />
 
 </LinearLayout>
