--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,12 +5,12 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".view.main_activity.MainActivity"
-    android:id="@+id/coordinator_layout">
+    android:id="@+id/coordinatorLayout">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/container">
+        android:id="@+id/fragmentContainer">
 
     </FrameLayout>
 
